feat: parse EFD auxiliary TXT and REC files
